--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">RangersCards</string>
+    <string name="app_name" translatable="false">RangersCards</string>
+
+    //Settings screen strings
+    <string name="account_title">Account</string>
+    <string name="exit_account_button">Exit</string>
+    <string name="account_name_header">Account name</string>
+    <string name="friends_amount_header">Friends</string>
+    <string name="contact_us_button">Contact us</string>
 </resources>
