Implemented theme block with theme switching

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
         <item quantity="many">%d friends</item>
         <item quantity="other">%d friends</item>
     </plurals>
+    <string name="settings_title">Settings</string>
+    <string name="theme_header">Theme</string>
+    <string name="light_theme">Light</string>
+    <string name="dark_theme">Dark</string>
+    <string name="system_theme">Default (%s)</string>
 </resources>
