--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="delete_account_button">Delete your account</string>
     <string name="sign_out_account_title">Sign out of RangersDB?</string>
     <string name="delete_account_title">Confirm account deletion</string>
-    <string name="sign_out_account_text">Are you sure you want to sign out of RangersDB?\n\nAny campaigns you uploaded or have had shared with you and decks from RangersB will be removed from this device. They can be resynced if you sign in again.\n\nNote: if you have made recent changes while offline, they may be lost.</string>
+    <string name="sign_out_account_text">Are you sure you want to sign out of RangersDB?\n\nAny campaigns you uploaded or have had shared with you and decks from RangersDB will be removed from this device. They can be resynced if you sign in again.\n\nNote: if you have made recent changes while offline, they may be lost.</string>
     <string name="cancel_button">Cancel</string>
     <string name="done_button">Done</string>
     <string name="account_name_header">Account name</string>
@@ -33,4 +33,7 @@
     <string name="light_theme">Light</string>
     <string name="dark_theme">Dark</string>
     <string name="system_theme">Default (%s)</string>
+    <string name="cards_title">Cards</string>
+    <string name="language_header">Language</string>
+    <string name="update_cards_button">Update cards</string>
 </resources>
