--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,8 @@
     <string name="backup_data_button">Backup Data</string>
     <string name="diagnostics_button">Diagnostics</string>
     <string name="contact_us_button">Contact us</string>
+
+    //Cards screen strings
+    <string name="no_matching_cards">No matching cards for \"%s\"</string>
+    <string name="no_matching_cards_filtered">No matching cards</string>
 </resources>
