--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -66,4 +66,5 @@
     <string name="cards_updating">Обновление карт</string>
     <string name="no_matching_cards">Нет карт по запросу «%s»</string>
     <string name="no_matching_cards_filtered">Нет подходящих карт</string>
+    <string name="search_for_card">Найти карту</string>
 </resources>
