--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     //Cards screen strings
     <string name="no_matching_cards">No matching cards for \"%s\"</string>
     <string name="no_matching_cards_filtered">No matching cards</string>
+    <string name="search_for_card">Search for a card</string>
 </resources>
