--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,11 @@
         <item quantity="many">%d friends</item>
         <item quantity="other">%d friends</item>
     </plurals>
+    <string name="your_friends">Your Friends</string>
+    <string name="sent_requests">Sent requests</string>
+    <string name="received_requests">Received requests</string>
+    <string name="search_results">Search Results</string>
+    <string name="no_matching_results">No results found for search \"%s\".</string>
     <string name="settings_title">Settings</string>
     <string name="theme_header">Theme</string>
     <string name="light_theme">Light</string>
