--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
         <item quantity="many">%d friends</item>
         <item quantity="other">%d friends</item>
     </plurals>
+    <string name="search_friends">Search friends</string>
     <string name="your_friends">Your Friends</string>
     <string name="sent_requests">Sent requests</string>
     <string name="received_requests">Received requests</string>
@@ -93,4 +94,18 @@
     <string name="fit_styled_card_text">FIT</string>
     <string name="foc_styled_card_text">FOC</string>
     <string name="spi_styled_card_text">SPI</string>
+
+    //Decks screen strings
+    <string name="traveler_background">Traveler</string>
+    <string name="shepherd_background">Shepherd</string>
+    <string name="forager_background">Forager</string>
+    <string name="artisan_background">Artisan</string>
+    <string name="explorer_specialty">Explorer</string>
+    <string name="shaper_specialty">Shaper</string>
+    <string name="conciliator_specialty">Conciliator</string>
+    <string name="artificer_specialty">Artificer</string>
+    <string name="search_decks">Search decks</string>
+    <string name="no_matching_decks">No matching decks for \"%s\"</string>
+    <string name="no_decks">No decks yet.\n\nUse the + button to create a new one.</string>
+
 </resources>
