--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -149,4 +149,11 @@
     <string name="deck_changes_added_collection">Добавлены из коллекции</string>
     <string name="deck_changes_returned_collection">Возвращены в коллекцию</string>
     <string name="save_deck_button">Сохранить изменения</string>
+    <string name="background_as_outside_interest">Одна из выбранных карт квалификации идет в счёт карт хобби.</string>
+    <string name="specialty_as_outside_interest">Одна из выбранных карт специализации идет в счёт карт хобби.</string>
+    <string name="save_deck_changes_header">Сохранить изменения?</string>
+    <string name="save_deck_changes_text">Кажется, вы внесли изменения, которые ещё не сохранены.</string>
+    <string name="save_deck_changes_button">Сохранить изменения</string>
+    <string name="discard_deck_changes_button">Отменить изменения</string>
+    <string name="saving_deck_changes_header">Сохранение…</string>
 </resources>
