--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,5 +174,12 @@
     <string name="deck_changes_added_collection">Added from collection</string>
     <string name="deck_changes_returned_collection">Returned to collection</string>
     <string name="save_deck_button">Save changes</string>
+    <string name="background_as_outside_interest">One of the chosen background cards is counting towards outside interest.</string>
+    <string name="specialty_as_outside_interest">One of the chosen specialty cards is counting towards outside interest.</string>
+    <string name="save_deck_changes_header">Save deck changes?</string>
+    <string name="save_deck_changes_text">Looks like you have made some changes that have not been saved.</string>
+    <string name="save_deck_changes_button">Save changes</string>
+    <string name="discard_deck_changes_button">Discard Changes</string>
+    <string name="saving_deck_changes_header">Saving…</string>
 
 </resources>
